## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = -I$(srcdir) -DG_LOG_DOMAIN=\"Gts\"

noinst_LIBRARIES = libgts.a

libgts_a_SOURCES = \
	object.c \
	point.c \
	vertex.c \
	segment.c \
	edge.c \
	triangle.c \
	face.c \
	kdtree.c \
	bbtree.c \
	misc.c \
	gts.h \
	gts-private.h \
	predicates.c \
	predicates.h \
	rounding.h \
	heap.c \
	eheap.c \
	fifo.c \
	matrix.c \
	surface.c \
	stripe.c \
	vopt.c \
	refine.c \
	iso.c \
	isotetra.c \
	split.c \
	psurface.c \
	hsurface.c \
	cdt.c \
	boolean.c \
	named.c \
	oocs.c \
	container.c \
	graph.c \
	pgraph.c \
	partition.c \
	curvature.c \
	tribox3.c

noinst_HEADERS = \
	gts.h
