## Top level 'models/scad' automake file

scadmodelsdir=	@SCADTREEDIR@
scadmodels_DATA= ${SCADMODELS}


SUBDIRS=proto

SCADMODELS= \
	RES0805.scad \
	RES0603.scad \
	CAP0805.scad \
	CAP0603.scad \
	SO14.scad \
	SO14W.scad \
	SO16.scad \
	SO16W.scad \
	LCD1601.scad \
	LCD1602.scad \
	LCD2004.scad \
	LCD4002.scad \
	LCD4004.scad \
	DIPSOCKET8.scad \
	DIPSOCKET14.scad \
	DIPSOCKET16.scad \
	DIPSOCKET18.scad \
	DIPSOCKET20.scad \
	DIPSOCKET22M.scad \
	DIPSOCKET22.scad \
	DIPSOCKET24M.scad \
	DIPSOCKET24N.scad \
	DIPSOCKET24.scad \
	DIPSOCKET28N.scad \
	DIPSOCKET28.scad \
	DIPSOCKET32.scad \
	DIPSOCKET40.scad \
	DIPSOCKET48.scad \
	DIPSOCKET64.scad \
	DIP8.scad \
	DIP14.scad \
	DIP16.scad \
	DIP18.scad \
	DIP20.scad \
	DIP22M.scad \
	DIP22.scad \
	DIP24M.scad \
	DIP24N.scad \
	DIP24.scad \
	DIP28N.scad \
	DIP28.scad \
	DIP32.scad \
	DIP40.scad \
	DIP48.scad \
	DIP64.scad

EXTRA_DIST= ${SCADMODELS}
